--- a/Externals.cfg
+++ b/Externals.cfg
@@ -50,13 +50,11 @@ local_path = components/pop
 externals = Externals_POP.cfg
 required = True
 
-
 [blom]
-tag = blom_cesm2_1
+tag = blom0_0_000
 protocol = git
-repo_url = https://github.com/NorESMhub/blom
-local_path = components/blom
-externals = Externals_BLOM.cfg
+repo_url = https://github.com/NorESMhub/BLOM
+local_path = components/micom
 required = True
 
 [rtm]
