--- a/Externals.cfg
+++ b/Externals.cfg
@@ -25,7 +25,7 @@ protocol = git
 repo_url = https://github.com/ESCOMP/cism-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
-required = True
+required = False
 
 [clm]
 tag = release-clm5.0.14-Nor_v1.0.0
@@ -48,7 +48,7 @@ protocol = svn
 repo_url = https://svn-ccsm-models.cgd.ucar.edu/pop2/release_tags
 local_path = components/pop
 externals = Externals_POP.cfg
-required = True
+required = False
 
 [blom]
 tag = blom0_0_000
@@ -69,7 +69,7 @@ tag = ww3_cesm2_1_rel_01
 protocol = svn
 repo_url = https://svn-ccsm-models.cgd.ucar.edu/ww3/release_tags
 local_path = components/ww3
-required = True
+required = False
 
 [externals_description]
 schema_version = 1.0.0
