corrected local_path for blom in Externals.cfg

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -54,7 +54,7 @@ required = False
 tag = blom0_0_001
 protocol = git
 repo_url = https://github.com/NorESMhub/BLOM
-local_path = components/micom
+local_path = components/blom
 required = True
 
 [rtm]
