modified tag for CAM in Externals.cfg : refers to branch release-noresm2.0.2_keyClim-withoutanthraer

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,5 +1,5 @@
 [cam]
-tag = cam_cesm2_1_rel_05-Nor_v1.0.2
+tag = cam_cesm2_1_rel_05-Nor_v1.0.2_keyClim-withoutanthraer
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
