--- a/Externals_keyClim-withoutanthraer.cfg
+++ b/Externals_keyClim-withoutanthraer.cfg
@@ -1,5 +1,5 @@
 [cam]
-tag = cam_cesm2_1_rel_05-Nor_v1.0.2
+tag = cam_cesm2_1_rel_05-Nor_v1.0.2_keyClim-withoutanthraer
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
