Externals.cfg : updated tag for CIME to ...Nor-v1.0.3 to include machine settings for Betzy ; Externals_continuous_development.cfg : updated tag for CAM to cam-Nor-dev and for CLM to clm-Nor-dev

--- a/Externals_continuous_development.cfg
+++ b/Externals_continuous_development.cfg
@@ -1,5 +1,5 @@
 [cam]
-tag = cam_cesm2_1_rel_05-Nor
+tag = cam-Nor-dev
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
@@ -28,7 +28,7 @@ externals = Externals_CISM.cfg
 required = False
 
 [clm]
-tag = release-clm5.0.14-Nor
+tag = clm-Nor-dev
 protocol = git
 repo_url = https://github.com/NorESMhub/ctsm
 local_path = components/clm
