modify 'Externals.cfg' to point to clm and cime branch of the platform

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -13,33 +13,54 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.3
-protocol = git
-repo_url = https://github.com/NorESMhub/cime
 local_path = cime
+protocol = git
+repo_url = https://github.com/huitang-earth/cime.git
+tag = cime_noresm_site_platform_test
 required = True
 
 [cism]
-tag = release-cesm2.0.04
-protocol = git
-repo_url = https://github.com/ESCOMP/cism-wrapper
 local_path = components/cism
+protocol = git
+repo_url = https://github.com/ESCOMP/CISM-wrapper
+tag = cism2_1_69
 externals = Externals_CISM.cfg
-required = False
+required = True
 
 [clm]
-tag = release-clm5.0.14-Nor_v1.0.1
+tag = noresms_site_platform_test
 protocol = git
-repo_url = https://github.com/NorESMhub/ctsm
+repo_url = https://github.com/huitang-earth/ctsm.git
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
 
-[mosart]
-tag = release-cesm2.0.03-Nor_v1.0.0
+[cmeps]
+local_path = cime/src/drivers/nuopc/
 protocol = git
-repo_url = https://github.com/NorESMhub/mosart
+repo_url = https://github.com/ESCOMP/CMEPS.git
+hash = 7654038
+required = True
+
+[cdeps]
+local_path = components/cdeps
+protocol = git
+repo_url = https://github.com/ESCOMP/CDEPS.git
+hash = 45b7a85
+required = True
+
+[mosart]
 local_path = components/mosart
+protocol = git
+repo_url = https://github.com/ESCOMP/MOSART
+tag = mosart1_0_38
+required = True
+
+[mizuRoute]
+local_path = components/mizuRoute
+protocol = git
+repo_url = https://github.com/nmizukami/mizuRoute
+hash = 34723c2
 required = True
 
 [pop]
@@ -58,17 +79,24 @@ local_path = components/blom
 required = True
 
 [rtm]
-tag = release-cesm2.0.02
-protocol = git
-repo_url = https://github.com/ESCOMP/rtm
 local_path = components/rtm
-required = False
+protocol = git
+repo_url = https://github.com/ESCOMP/RTM
+tag = rtm1_0_73
+required = True
 
 [ww3]
 tag = ww3_cesm2_1_rel_01
 protocol = svn
 repo_url = https://svn-ccsm-models.cgd.ucar.edu/ww3/release_tags
 local_path = components/ww3
+required = False
+
+[doc-builder]
+local_path = doc/doc-builder
+protocol = git
+repo_url = https://github.com/ESMCI/doc-builder
+tag = v1.0.5
 required = False
 
 [externals_description]
