modify Externals.cfg to load updated branch of CTSM and CIME

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -15,8 +15,8 @@ required = True
 [cime]
 local_path = cime
 protocol = git
-repo_url = https://github.com/huitang-earth/cime.git
-tag = cime_noresm_site_platform_test
+repo_url = https://github.com/ESMCI/cime
+tag = branch_tags/cime5.8.32_a02
 required = True
 
 [cism]
@@ -28,9 +28,9 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = noresms_site_platform_test
+tag = ctsm5.1.dev026
 protocol = git
-repo_url = https://github.com/huitang-earth/ctsm.git
+repo_url = https://github.com/ESCOMP/CTSM.git
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
