--- a/Externals_continuous_development.cfg
+++ b/Externals_continuous_development.cfg
@@ -1,5 +1,5 @@
 [cam]
-tag = cam-Nor-dev
+tag = cam_cesm2_1_rel_05-Nor
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
@@ -28,7 +28,7 @@ externals = Externals_CISM.cfg
 required = False
 
 [clm]
-tag = clm-Nor-dev
+tag = release-clm5.0.14-Nor
 protocol = git
 repo_url = https://github.com/NorESMhub/ctsm
 local_path = components/clm
