Add NorCPM in Externals.cfg

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -71,5 +71,12 @@ repo_url = https://svn-ccsm-models.cgd.ucar.edu/ww3/release_tags
 local_path = components/ww3
 required = False
 
+[norcpm]
+tag = 0.8.2
+protocol = git
+repo_url = git@github.com:NorESMhub/norcpm.git
+local_path = norcpm
+required = True
+
 [externals_description]
 schema_version = 1.0.0
