--- a/Externals.cfg
+++ b/Externals.cfg
@@ -72,7 +72,7 @@ local_path = components/ww3
 required = False
 
 [norcpm]
-tag = 0.8.4
+tag = v0.8.4
 protocol = git
 repo_url = git@github.com:NorESMhub/norcpm.git
 local_path = norcpm
