norcpm require -> False

--- a/Externals_continuous_development.cfg
+++ b/Externals_continuous_development.cfg
@@ -76,7 +76,7 @@ tag = main
 protocol = git
 repo_url = git@github.com:NorESMhub/norcpm.git
 local_path = norcpm
-required = True
+required = False
 
 [externals_description]
 schema_version = 1.0.0
