--- a/Externals.cfg
+++ b/Externals.cfg
@@ -76,7 +76,7 @@ tag = v0.8.4
 protocol = git
 repo_url = git@github.com:NorESMhub/norcpm.git
 local_path = norcpm
-required = True
+required = False
 
 [externals_description]
 schema_version = 1.0.0
