Externals.cfg update to reflect new NorESMhub/CTSM branch

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -37,7 +37,7 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = release-cesm2.2.01
+tag = N2dev_port_from_CESM2.2.0
 protocol = git
 repo_url = https://github.com/ESCOMP/CTSM
 local_path = components/clm
