Externals.cfg update

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -39,7 +39,7 @@ required = True
 [clm]
 tag = N2dev_port_from_CESM2.2.0
 protocol = git
-repo_url = https://github.com/ESCOMP/CTSM
+repo_url = https://github.com/NorESMhub/CTSM
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
