add additional line for Externals_CAM.cfg, and modified links (to temporary repositories

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,21 +1,22 @@
 [cam]
-tag = cam_cesm2_1_rel_05-Nor_v1.0.4
+tag = cam_cesm2_2_rel_02-Nor-trial4
 protocol = git
-repo_url = https://github.com/NorESMhub/CAM
+repo_url = https://github.com/DirkOlivie/CAM
 local_path = components/cam
+externals = Externals_CAM.cfg
 required = True
 
 [cice]
-tag = cice5_20181109-Nor_v1.0.3
+tag = cice5_20200430_cesm2.2-trial4
 protocol = git
-repo_url = https://github.com/NorESMHub/CESM_CICE5
+repo_url = https://github.com/DirkOlivie/CESM_CICE5
 local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.5
+tag = cime5.8.32-Nor-trial4
 protocol = git
-repo_url = https://github.com/NorESMhub/cime
+repo_url = https://github.com/DirkOlivie/cime
 local_path = cime
 required = True
 
@@ -28,15 +29,15 @@ externals = Externals_CISM.cfg
 required = False
 
 [clm]
-tag = release-clm5.0.14-Nor_v1.0.3
+tag = release-cesm2.2.01-Nor-trial4
 protocol = git
-repo_url = https://github.com/NorESMhub/ctsm
+repo_url = https://github.com/DirkOlivie/ctsm
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
 
 [mosart]
-tag = release-cesm2.0.03-Nor_v1.0.0
+tag = release-cesm2.2-Nor
 protocol = git
 repo_url = https://github.com/NorESMhub/mosart
 local_path = components/mosart
