updated Externals.cfg more according to CESM2.2

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -13,17 +13,25 @@ repo_url = https://github.com/DirkOlivie/CESM_CICE5
 local_path = components/cice
 required = True
 
+[cdeps]
+hash = 45b7a85
+protocol = git
+repo_url = https://github.com/ESCOMP/CDEPS.git
+local_path = components/cdeps
+required = True
+
 [cime]
 tag = cime5.8.32-Nor-trial4
 protocol = git
 repo_url = https://github.com/DirkOlivie/cime
 local_path = cime
+externals = ../Externals_cime.cfg
 required = True
 
 [cism]
-tag = release-cesm2.0.04
+tag = cism2_1_69
 protocol = git
-repo_url = https://github.com/ESCOMP/cism-wrapper
+repo_url = https://github.com/ESCOMP/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
 required = False
@@ -36,6 +44,22 @@ local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
 
+[fms]
+tag = fi_20200609
+protocol = git
+repo_url = https://github.com/ESCOMP/FMS_interface
+local_path = libraries/FMS
+externals = Externals_FMS.cfg
+required = False
+
+[mom]
+tag = mi_20200908
+protocol = git
+repo_url = https://github.com/ESCOMP/MOM_interface
+local_path = components/mom
+externals = Externals.cfg
+required = False
+
 [mosart]
 tag = release-cesm2.2-Nor
 protocol = git
@@ -44,9 +68,9 @@ local_path = components/mosart
 required = True
 
 [pop]
-tag = pop2_cesm2_1_rel_n01
-protocol = svn
-repo_url = https://svn-ccsm-models.cgd.ucar.edu/pop2/release_tags
+tag = cesm_pop_2_1_20200730
+protocol = git
+repo_url = https://github.com/ESCOMP/POP2-CESM
 local_path = components/pop
 externals = Externals_POP.cfg
 required = False
@@ -59,16 +83,16 @@ local_path = components/blom
 required = True
 
 [rtm]
-tag = release-cesm2.0.02
+tag = rtm1_0_72
 protocol = git
-repo_url = https://github.com/ESCOMP/rtm
+repo_url = https://github.com/ESCOMP/RTM
 local_path = components/rtm
 required = False
 
 [ww3]
-tag = ww3_cesm2_1_rel_01
-protocol = svn
-repo_url = https://svn-ccsm-models.cgd.ucar.edu/ww3/release_tags
+tag = ww3_200710
+protocol = git
+repo_url = https://github.com/ESCOMP/WW3-CESM
 local_path = components/ww3
 required = False
 
