updated Externals.cfg even more according to CESM2.2 (CESM2.2 upgrade)

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -34,7 +34,7 @@ protocol = git
 repo_url = https://github.com/ESCOMP/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
-required = False
+required = True
 
 [clm]
 tag = release-cesm2.2.01-Nor-trial4
@@ -87,14 +87,14 @@ tag = rtm1_0_72
 protocol = git
 repo_url = https://github.com/ESCOMP/RTM
 local_path = components/rtm
-required = False
+required = True
 
 [ww3]
 tag = ww3_200710
 protocol = git
 repo_url = https://github.com/ESCOMP/WW3-CESM
 local_path = components/ww3
-required = False
+required = True
 
 [norcpm]
 tag = v0.8.4
@@ -104,4 +104,4 @@ local_path = norcpm
 required = False
 
 [externals_description]
-schema_version = 1.0.0
+schema_version = 1.0.01
