--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,7 @@
 [cam]
 tag = cam_cesm2_2_rel_02-Nor-trial4
 protocol = git
-repo_url = https://github.com/DirkOlivie/CAM
+repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
@@ -9,7 +9,7 @@ required = True
 [cice]
 tag = cice5_20200430_cesm2.2-trial4
 protocol = git
-repo_url = https://github.com/DirkOlivie/CESM_CICE5
+repo_url = https://github.com/NorESMhub/CESM_CICE5
 local_path = components/cice
 required = True
 
@@ -23,7 +23,7 @@ required = True
 [cime]
 tag = cime5.8.32-Nor-trial4
 protocol = git
-repo_url = https://github.com/DirkOlivie/cime
+repo_url = https://github.com/NorESMhub/cime
 local_path = cime
 externals = ../Externals_cime.cfg
 required = True
@@ -39,7 +39,7 @@ required = True
 [clm]
 tag = release-cesm2.2.01-Nor-trial4
 protocol = git
-repo_url = https://github.com/DirkOlivie/ctsm
+repo_url = https://github.com/NorESMhub/ctsm
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
