--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,5 +1,5 @@
 [cam]
-tag = cam_cesm2_2_rel_02-Nor-trial4
+tag = cam_cesm2_2_rel_02-Nor
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
@@ -7,7 +7,7 @@ externals = Externals_CAM.cfg
 required = True
 
 [cice]
-tag = cice5_20200430_cesm2.2-trial4
+tag = release-cesm2.2-Nor
 protocol = git
 repo_url = https://github.com/NorESMhub/CESM_CICE5
 local_path = components/cice
@@ -21,7 +21,7 @@ local_path = components/cdeps
 required = True
 
 [cime]
-tag = cime5.8.32-Nor-trial4
+tag = cime5.8.32-Nor
 protocol = git
 repo_url = https://github.com/NorESMhub/cime
 local_path = cime
@@ -37,7 +37,7 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = release-cesm2.2.01-Nor-trial4
+tag = release-cesm2.2.01-Nor
 protocol = git
 repo_url = https://github.com/NorESMhub/ctsm
 local_path = components/clm
