--- a/Externals.cfg
+++ b/Externals.cfg
@@ -76,7 +76,7 @@ externals = Externals_POP.cfg
 required = False
 
 [blom]
-tag = release-1.2
+tag = v1.2.0
 protocol = git
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
