--- a/Externals.cfg
+++ b/Externals.cfg
@@ -20,9 +20,9 @@ local_path = cime
 required = True
 
 [cism]
-tag = release-cesm2.0.04
+tag = wrapper_noresm2.0.2_v1
 protocol = git
-repo_url = https://github.com/ESCOMP/cism-wrapper
+repo_url = https://github.com/NorESMhub/cism-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
 required = False
