--- a/Externals.cfg
+++ b/Externals.cfg
@@ -16,7 +16,7 @@ required = True
 local_path = cime
 protocol = git
 repo_url = https://github.com/ESMCI/cime
-tag = branch_tags/cime5.8.32_a02
+tag = cime5.6.39
 required = True
 
 [cism]
@@ -28,7 +28,7 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = ctsm5.1.dev026
+tag = release-clm5.0.35
 protocol = git
 repo_url = https://github.com/ESCOMP/CTSM.git
 local_path = components/clm
