--- a/Externals.cfg
+++ b/Externals.cfg
@@ -13,7 +13,7 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.39
+tag = branch_tags/cime5.8.32_a02
 protocol = git
 repo_url = https://github.com/ESMCI/cime
 local_path = cime
