--- a/Externals.cfg
+++ b/Externals.cfg
@@ -13,7 +13,7 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.5
+tag = cime6.0.15
 protocol = git
 repo_url = https://github.com/NorESMhub/cime
 local_path = cime
@@ -28,7 +28,7 @@ externals = Externals_CISM.cfg
 required = False
 
 [clm]
-tag = release-clm5.0.14-Nor_v1.0.3
+tag = ctsm5.1.dev090
 protocol = git
 repo_url = https://github.com/NorESMhub/ctsm
 local_path = components/clm
