--- a/Externals.cfg
+++ b/Externals.cfg
@@ -16,7 +16,7 @@ required = True
 local_path = cime
 protocol = git
 repo_url = https://github.com/ESMCI/cime
-tag = cime5.6.39
+tag = cime6.0.15
 required = True
 
 [cism]
@@ -28,7 +28,7 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = release-clm5.0.35
+tag = ctsm5.1.dev090
 protocol = git
 repo_url = https://github.com/ESCOMP/CTSM.git
 local_path = components/clm
@@ -36,17 +36,46 @@ externals = Externals_CLM.cfg
 required = True
 
 [cmeps]
-local_path = cime/src/drivers/nuopc/
+tag = cmeps0.13.47
 protocol = git
 repo_url = https://github.com/ESCOMP/CMEPS.git
-hash = 7654038
+local_path = components/cmeps
 required = True
 
 [cdeps]
-local_path = components/cdeps
+tag = cdeps0.12.41
 protocol = git
 repo_url = https://github.com/ESCOMP/CDEPS.git
-hash = 45b7a85
+local_path = components/cdeps
+externals =  Externals_CDEPS.cfg
+required = True
+
+[cpl7]
+tag = cpl7.0.12
+protocol = git
+repo_url = https://github.com/ESCOMP/CESM_CPL7andDataComps
+local_path = components/cpl7
+required = True
+
+[share]
+tag = share1.0.10
+protocol = git
+repo_url = https://github.com/ESCOMP/CESM_share
+local_path = share
+required = True
+
+[mct]
+tag = MCT_2.11.0
+protocol = git
+repo_url = https://github.com/MCSclimate/MCT
+local_path = libraries/mct
+required = True
+
+[parallelio]
+tag = pio2_5_6
+protocol = git
+repo_url = https://github.com/NCAR/ParallelIO
+local_path = libraries/parallelio
 required = True
 
 [mosart]
@@ -61,6 +90,13 @@ local_path = components/mizuRoute
 protocol = git
 repo_url = https://github.com/nmizukami/mizuRoute
 hash = 34723c2
+required = True
+
+[ccs_config]
+tag = ccs_config_cesm0.0.15
+protocol = git
+repo_url = https://github.com/ESMCI/ccs_config_cesm.git
+local_path = ccs_config
 required = True
 
 [pop]
