--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,7 @@
 [cam]
-tag = cam_cesm2_1_rel_05-Nor_v1.0.2
+tag = cam_KeyClim_cloud_exp
 protocol = git
-repo_url = https://github.com/NorESMhub/CAM
+repo_url = https://github.com/oyvindseland/CAM
 local_path = components/cam
 required = True
 
@@ -15,7 +15,7 @@ required = True
 [cime]
 tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.5
 protocol = git
-repo_url = https://github.com/NorESMhub/cime
+repo_url = https://github.com/oyvindseland/cime
 local_path = cime
 required = True
 
