--- a/Externals.cfg
+++ b/Externals.cfg
@@ -15,7 +15,7 @@ required = True
 [cime]
 tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.5
 protocol = git
-repo_url = https://github.com/oyvindseland/cime
+repo_url = https://github.com/NorESMhub/cime
 local_path = cime
 required = True
 
