--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,7 @@
 [cam]
 tag = cam_KeyClim_cloud_exp
 protocol = git
-repo_url = https://github.com/oyvindseland/CAM
+repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 required = True
 
