--- a/Externals.cfg
+++ b/Externals.cfg
@@ -72,7 +72,7 @@ local_path = components/ww3
 required = False
 
 [norcpm]
-tag = v0.8.4
+tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.5
 protocol = git
 repo_url = git@github.com:NorESMhub/norcpm.git
 local_path = norcpm
