--- a/Externals.cfg
+++ b/Externals.cfg
@@ -13,32 +13,32 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.5
+tag = cime6.0.45
 protocol = git
-repo_url = https://github.com/NorESMhub/cime
+repo_url = https://github.com/ESMCI/cime
 local_path = cime
 required = True
 
 [cism]
-tag = wrapper_noresm2.0.2_v1
+tag = cism2_1_69
 protocol = git
-repo_url = https://github.com/NorESMhub/cism-wrapper
+repo_url = https://github.com/ESCOMP/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
-required = False
+required = True
 
 [clm]
-tag = release-clm5.0.14-Nor_v1.0.3
+tag = ctsm5.1.dev108
 protocol = git
-repo_url = https://github.com/NorESMhub/ctsm
+repo_url = https://github.com/ESCOMP/CTSM.git
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
 
 [mosart]
-tag = release-cesm2.0.03-Nor_v1.0.0
+tag = mosart1_0_45
 protocol = git
-repo_url = https://github.com/NorESMhub/mosart
+repo_url = https://github.com/ESCOMP/MOSART
 local_path = components/mosart
 required = True
 
@@ -58,11 +58,11 @@ local_path = components/blom
 required = True
 
 [rtm]
-tag = release-cesm2.0.02
+tag = rtm1_0_73
 protocol = git
 repo_url = https://github.com/ESCOMP/rtm
 local_path = components/rtm
-required = False
+required = True
 
 [ww3]
 tag = ww3_cesm2_1_rel_01
@@ -80,3 +80,60 @@ required = False
 
 [externals_description]
 schema_version = 1.0.0
+
+[cmeps]
+tag = cmeps0.13.71
+protocol = git
+repo_url = https://github.com/ESCOMP/CMEPS.git
+local_path = components/cmeps
+required = True
+
+[cdeps]
+tag = cdeps0.12.63
+protocol = git
+repo_url = https://github.com/ESCOMP/CDEPS.git
+local_path = components/cdeps
+externals =  Externals_CDEPS.cfg
+required = True
+
+[cpl7]
+tag = cpl7.0.14
+protocol = git
+repo_url = https://github.com/ESCOMP/CESM_CPL7andDataComps
+local_path = components/cpl7
+required = True
+
+[share]
+tag = share1.0.12
+protocol = git
+repo_url = https://github.com/ESCOMP/CESM_share
+local_path = share
+required = True
+
+[mct]
+tag = MCT_2.11.0
+protocol = git
+repo_url = https://github.com/MCSclimate/MCT
+local_path = libraries/mct
+required = True
+
+[parallelio]
+tag = pio2_5_7
+protocol = git
+repo_url = https://github.com/NCAR/ParallelIO
+local_path = libraries/parallelio
+required = True
+
+[mizuRoute]
+local_path = components/mizuRoute
+protocol = git
+repo_url = https://github.com/nmizukami/mizuRoute
+hash = 34723c2
+required = True
+
+[ccs_config]
+tag = ccs_config_cesm0.0.38
+protocol = git
+repo_url = https://github.com/ESMCI/ccs_config_cesm.git
+local_path = ccs_config
+required = True
