--- a/Externals_continuous_development.cfg
+++ b/Externals_continuous_development.cfg
@@ -55,6 +55,7 @@ branch = release-1.3
 protocol = git
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
+externals = Externals_BLOM.cfg
 required = True
 
 [rtm]
