--- a/Externals.cfg
+++ b/Externals.cfg
@@ -55,6 +55,7 @@ tag = v1.1.0
 protocol = git
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
+externals = Externals_BLOM.cfg
 required = True
 
 [rtm]
