--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "doc"]
 	path = doc
-	url = git@github.com:NorESMhub/NorESM-docs.git
+	url = https://github.com/NorESMhub/NorESM-docs.git
