--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,7 +15,7 @@ build:
     # rust: "1.64"
     # golang: "1.19"
 
-# Build documentation in the docs/ directory with Sphinx
+# Build documentation in the doc/ directory with Sphinx
 sphinx:
    configuration: doc/conf.py
 
@@ -30,4 +30,5 @@ python:
 
 # Add submodules
 submodules:
-   include: all
+   include:
+     - doc
