--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,9 @@
 [ccs_config]
-tag = ccs_config_cesm0.0.49
+#tag = ccs_config_cesm0.0.49
+#the following hash is from branch feature/add_betzy
+hash = c32d6ed
 protocol = git
-repo_url = https://github.com/ESMCI/ccs_config_cesm.git
+repo_url = https://github.com/mvertens/ccs_config_cesm.git
 local_path = ccs_config
 required = True
 
@@ -72,9 +74,11 @@ local_path = libraries/parallelio
 required = True
 
 [cime]
-tag = cime6.0.82
+#tag = cime6.0.82
+#the following hash is from branch feature/add_betzy
+hash = 07132551c
 protocol = git
-repo_url = https://github.com/ESMCI/cime
+repo_url = https://github.com/mvertens/cime
 local_path = cime
 required = True
 
@@ -133,7 +137,7 @@ local_path = tools/statistical_ensemble_test/pyCECT
 required = False
 
 [rtm]
-tag = rtm1_0_78 
+tag = rtm1_0_78
 protocol = git
 repo_url = https://github.com/ESCOMP/RTM
 local_path = components/rtm
@@ -147,9 +151,11 @@ local_path = components/ww3
 required = True
 
 [ww3dev]
-tag = main_0.0.5
+#tag = main_0.0.5
+#the following hash is from branch feature/add_wtnx1v4
+hash = 62aa15b
 protocol = git
-repo_url = https://github.com/ESCOMP/WW3_interface
+repo_url = https://github.com/mvertens/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
 required = False
