added cmeps update for betzy

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -31,7 +31,9 @@ externals = Externals.cfg
 required = True
 
 [cmeps]
-tag = cmeps0.14.2
+#tag = cmeps0.14.2
+#the following hash is from branch feature/add_betzy
+hash = 311fb24
 protocol = git
 repo_url = https://github.com/ESCOMP/CMEPS.git
 local_path = components/cmeps
