added vsls/ozone compsets in config_compsets; modified Externals.cfg for CIME and BLOM to point to respective feature-hamocc-vsls branch

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -13,7 +13,7 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.5
+tag = feature-hamocc-vsls
 protocol = git
 repo_url = https://github.com/NorESMhub/cime
 local_path = cime
@@ -51,7 +51,7 @@ externals = Externals_POP.cfg
 required = False
 
 [blom]
-tag = v1.0.0
+tag = feature-hamocc-vsls
 protocol = git
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
