--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,5 +1,5 @@
 [cam]
-tag = cam_cesm2_1_rel_05-Nor_v1.0.2
+tag = feature-ozone
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
@@ -13,7 +13,7 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = feature-hamocc-vsls
+tag = feature-ozone
 protocol = git
 repo_url = https://github.com/NorESMhub/cime
 local_path = cime
