--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,9 +1,7 @@
 [ccs_config]
-#tag = ccs_config_cesm0.0.49
-#the following hash is from branch feature/add_betzy
-hash = c32d6ed
+hash = 6dd3d69
 protocol = git
-repo_url = https://github.com/mvertens/ccs_config_cesm.git
+repo_url = https://github.com/NorESMhub/ccs_config_cesm.git
 local_path = ccs_config
 required = True
 
@@ -15,13 +13,6 @@ local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
 
-[cice5]
-tag = cice5_20220204
-protocol = git
-repo_url = https://github.com/ESCOMP/CESM_CICE5
-local_path = components/cice5
-required = True
-
 [cice6]
 tag = cesm_cice6_2_0_34
 protocol = git
@@ -31,16 +22,14 @@ externals = Externals.cfg
 required = True
 
 [cmeps]
-#tag = cmeps0.14.2
-#the following hash is from branch feature/add_betzy
-hash = 311fb24
+tag = cmeps0.14.2
 protocol = git
-repo_url = https://github.com/ESCOMP/CMEPS.git
+repo_url = https://github.com/NorESMhub/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cdeps]
-tag = cdeps0.12.67
+tag = cdeps1.0.9
 protocol = git
 repo_url = https://github.com/ESCOMP/CDEPS.git
 local_path = components/cdeps
@@ -76,11 +65,9 @@ local_path = libraries/parallelio
 required = True
 
 [cime]
-#tag = cime6.0.82
-#the following hash is from branch feature/add_betzy
-hash = 07132551c
+tag = 18a5b4ca1
 protocol = git
-repo_url = https://github.com/mvertens/cime
+repo_url = https://github.com/NorESMhub/cime.git
 local_path = cime
 required = True
 
@@ -123,14 +110,6 @@ repo_url = https://github.com/ESCOMP/MOSART
 local_path = components/mosart
 required = True
 
-[pop]
-tag = cesm_pop_2_1_20220322
-protocol = git
-repo_url = https://github.com/ESCOMP/POP2-CESM
-local_path = components/pop
-externals = Externals_POP.cfg
-required = True
-
 [pycect]
 tag = 3.2.2
 protocol = git
@@ -145,22 +124,13 @@ repo_url = https://github.com/ESCOMP/RTM
 local_path = components/rtm
 required = True
 
-[ww3]
-tag = ww3_221108
-protocol = git
-repo_url = https://github.com/ESCOMP/WW3-CESM
-local_path = components/ww3
-required = True
-
 [ww3dev]
-#tag = main_0.0.5
-#the following hash is from branch feature/add_wtnx1v4
-hash = 62aa15b
+hash = 6eec718
 protocol = git
-repo_url = https://github.com/mvertens/WW3_interface
+repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
-required = False
+required = True
 
 [externals_description]
 schema_version = 1.0.01
