working code base for ww3dev and unstructured meshes on betzy

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,8 @@
 [ccs_config]
-hash = 6dd3d69
+# the following is still on the branch feature/add_sigma2
+hash = c5cfba8
 protocol = git
-repo_url = https://github.com/NorESMhub/ccs_config_cesm.git
+repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
 local_path = ccs_config
 required = True
 
@@ -65,7 +66,8 @@ local_path = libraries/parallelio
 required = True
 
 [cime]
-tag = 18a5b4ca1
+# The following is on the default branch noresm
+tag = daf6a3b1a
 protocol = git
 repo_url = https://github.com/NorESMhub/cime.git
 local_path = cime
@@ -125,7 +127,7 @@ local_path = components/rtm
 required = True
 
 [ww3dev]
-hash = 6eec718
+hash = aa354b9
 protocol = git
 repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3dev
