first prototype of noresm

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,54 +1,12 @@
-[ccs_config]
-# the following is still on the branch feature/add_sigma2
-hash = c5cfba8
-protocol = git
-repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
-local_path = ccs_config
-required = True
+#-----------------------------
+# Libraries
+#-----------------------------
 
-[cam]
-tag = cam6_3_085
+[parallelio]
+tag = pio2_5_9
 protocol = git
-repo_url = https://github.com/ESCOMP/CAM
-local_path = components/cam
-externals = Externals_CAM.cfg
-required = True
-
-[cice6]
-tag = cesm_cice6_2_0_34
-protocol = git
-repo_url = https://github.com/ESCOMP/CESM_CICE
-local_path = components/cice
-externals = Externals.cfg
-required = True
-
-[cmeps]
-tag = cmeps0.14.2
-protocol = git
-repo_url = https://github.com/NorESMhub/CMEPS.git
-local_path = components/cmeps
-required = True
-
-[cdeps]
-tag = cdeps1.0.9
-protocol = git
-repo_url = https://github.com/ESCOMP/CDEPS.git
-local_path = components/cdeps
-externals =  Externals_CDEPS.cfg
-required = True
-
-[cpl7]
-tag = cpl7.0.14
-protocol = git
-repo_url = https://github.com/ESCOMP/CESM_CPL7andDataComps
-local_path = components/cpl7
-required = True
-
-[share]
-tag = share1.0.16
-protocol = git
-repo_url = https://github.com/ESCOMP/CESM_share
-local_path = share
+repo_url = https://github.com/NCAR/ParallelIO
+local_path = libraries/parallelio
 required = True
 
 [mct]
@@ -58,19 +16,84 @@ repo_url = https://github.com/MCSclimate/MCT
 local_path = libraries/mct
 required = True
 
-[parallelio]
-tag = pio2_5_9
+[fms]
+tag = fi_20220425
 protocol = git
-repo_url = https://github.com/NCAR/ParallelIO
-local_path = libraries/parallelio
+repo_url = https://github.com/ESCOMP/FMS_interface
+local_path = libraries/FMS
+externals = Externals_FMS.cfg
+required = False
+
+#-----------------------------
+# Configuration/CCS
+#-----------------------------
+
+[ccs_config]
+tag = ccs_config_noresm0.0.2
+protocol = git
+repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
+local_path = ccs_config
 required = True
 
 [cime]
-# The following is on the default branch noresm
-tag = daf6a3b1a
+tag = cime6.0.105_noresm_v1
 protocol = git
 repo_url = https://github.com/NorESMhub/cime.git
 local_path = cime
+required = True
+
+#-----------------------------
+# Share
+#-----------------------------
+
+[share]
+tag = share1.0.16
+protocol = git
+repo_url = https://github.com/ESCOMP/CESM_share
+local_path = share
+required = True
+
+#-----------------------------
+# Components
+#-----------------------------
+
+[blom]
+tag = d3f2911
+protocol = git
+repo_url = https://github.com/NorESMhub/BLOM
+local_path = components/blom
+externals = Externals_BLOM.cfg
+required = True
+
+[cam]
+tag = cam6_3_107
+protocol = git
+repo_url = https://github.com/ESCOMP/CAM
+local_path = components/cam
+externals = Externals_CAM.cfg
+required = True
+
+[cice6]
+tag = cesm_cice6_4_1_7_noresm_v0
+protocol = git
+repo_url = https://github.com/NorESMhub/NorESM_CICE
+local_path = components/cice
+externals = Externals.cfg
+required = True
+
+[cdeps]
+tag = cdeps1.0.10
+protocol = git
+repo_url = https://github.com/NorESMhub/CDEPS.git
+local_path = components/cdeps
+externals =  Externals_CDEPS.cfg
+required = True
+
+[cmeps]
+tag = cmeps0.14.24_noresm_v0
+protocol = git
+repo_url = https://github.com/NorESMhub/CMEPS.git
+local_path = components/cmeps
 required = True
 
 [cism]
@@ -82,28 +105,12 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = ctsm5.1.dev114
+tag = ctsm5.1.dev121
 protocol = git
 repo_url = https://github.com/ESCOMP/CTSM
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
-
-[fms]
-tag = fi_20220425
-protocol = git
-repo_url = https://github.com/ESCOMP/FMS_interface
-local_path = libraries/FMS
-externals = Externals_FMS.cfg
-required = False
-
-[mom]
-tag = mi_221206
-protocol = git
-repo_url = https://github.com/ESCOMP/MOM_interface
-local_path = components/mom
-externals = Externals.cfg
-required = False
 
 [mosart]
 tag = mosart1_0_47
@@ -111,13 +118,6 @@ protocol = git
 repo_url = https://github.com/ESCOMP/MOSART
 local_path = components/mosart
 required = True
-
-[pycect]
-tag = 3.2.2
-protocol = git
-repo_url = https://github.com/NCAR/PyCECT
-local_path = tools/statistical_ensemble_test/pyCECT
-required = False
 
 [rtm]
 tag = rtm1_0_78
@@ -127,12 +127,23 @@ local_path = components/rtm
 required = True
 
 [ww3dev]
-hash = aa354b9
+tag = ww3_interface_noresm0.0.1
 protocol = git
 repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
 required = True
+
+#-----------------------------
+# Tools
+#-----------------------------
+
+[pycect]
+tag = 3.2.2
+protocol = git
+repo_url = https://github.com/NCAR/PyCECT
+local_path = tools/statistical_ensemble_test/pyCECT
+required = False
 
 [externals_description]
 schema_version = 1.0.01
