--- a/Externals.cfg
+++ b/Externals.cfg
@@ -3,7 +3,7 @@
 #-----------------------------
 
 [parallelio]
-tag = pio2_5_9
+tag = pio2_5_10
 protocol = git
 repo_url = https://github.com/NCAR/ParallelIO
 local_path = libraries/parallelio
@@ -21,7 +21,7 @@ required = True
 #-----------------------------
 
 [ccs_config]
-tag = ccs_config_noresm0.0.2
+tag = ccs_config_noresm0.0.3
 protocol = git
 repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
 local_path = ccs_config
@@ -39,9 +39,9 @@ required = True
 #-----------------------------
 
 [share]
-tag = share1.0.16
+tag = share1.0.17_noresm_v0
 protocol = git
-repo_url = https://github.com/ESCOMP/CESM_share
+repo_url = https://github.com/NorESMHub/NorESM_share
 local_path = share
 required = True
 
@@ -66,7 +66,7 @@ externals = Externals_CAM.cfg
 required = True
 
 [cice6]
-tag = cesm_cice6_4_1_7_noresm_v0
+tag = cesm_cice6_4_1_7_noresm_v1
 protocol = git
 repo_url = https://github.com/NorESMhub/NorESM_CICE
 local_path = components/cice
@@ -97,17 +97,17 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = ctsm5.1.dev121
+tag = ctsm5.1.dev122-noresm_v0
 protocol = git
-repo_url = https://github.com/ESCOMP/CTSM
+repo_url = https://github.com/NorESMhub/CTSM
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
 
 [mosart]
-tag = mosart1_0_47
+tag = mosart1_0_48_noresm_v0
 protocol = git
-repo_url = https://github.com/ESCOMP/MOSART
+repo_url = https://github.com/NorESMhub/MOSART
 local_path = components/mosart
 required = True
 
