udpates of noresm_develop

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,4 +1,4 @@
-#-----------------------------
+-----------------------------
 # Libraries
 #-----------------------------
 
@@ -39,7 +39,7 @@ required = True
 #-----------------------------
 
 [share]
-tag = share1.0.17_noresm_v0
+tag = share1.0.17_noresm_v1
 protocol = git
 repo_url = https://github.com/NorESMHub/NorESM_share
 local_path = share
@@ -58,9 +58,9 @@ externals = Externals_BLOM.cfg
 required = True
 
 [cam]
-tag = cam6_3_107
+tag = cam6_3_107_noresm_v1
 protocol = git
-repo_url = https://github.com/ESCOMP/CAM
+repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
@@ -82,7 +82,7 @@ externals =  Externals_CDEPS.cfg
 required = True
 
 [cmeps]
-tag = cmeps0.14.24_noresm_v0
+tag = cmeps0.14.24_noresm_v1
 protocol = git
 repo_url = https://github.com/NorESMhub/CMEPS.git
 local_path = components/cmeps
@@ -105,7 +105,7 @@ externals = Externals_CLM.cfg
 required = True
 
 [mosart]
-tag = mosart1_0_48_noresm_v0
+tag = mosart1_0_48_noresm_v1
 protocol = git
 repo_url = https://github.com/NorESMhub/MOSART
 local_path = components/mosart
