updates for ww3dev and clm

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -21,9 +21,11 @@ required = True
 #-----------------------------
 
 [ccs_config]
-tag = ccs_config_noresm0.0.9
+#tag = ccs_config_noresm0.0.9
+branch = feature/new_grids
 protocol = git
-repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
+#repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
+repo_url = https://github.com/mvertens/ccs_config_cesm.git
 local_path = ccs_config
 required = True
 
@@ -50,7 +52,7 @@ required = True
 #-----------------------------
 
 [blom]
-tag = 81cd404
+tag = 0a389fe
 protocol = git
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
@@ -97,9 +99,11 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = ctsm5.1.dev124-noresm_v1
+#tag = ctsm5.1.dev124-noresm_v1
+branch = feature/fates_nocomp_changes
 protocol = git
-repo_url = https://github.com/NorESMhub/CTSM
+#repo_url = https://github.com/NorESMhub/CTSM
+repo_url = https://github.com/mvertens/CTSM
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
@@ -119,9 +123,11 @@ local_path = components/rtm
 required = True
 
 [ww3dev]
-tag = ww3_interface_noresm0.0.4
+#tag = ww3_interface_noresm0.0.4
+branch = feature/updated_workflow 
 protocol = git
-repo_url = https://github.com/NorESMhub/WW3_interface
+#repo_url = https://github.com/NorESMhub/WW3_interface
+repo_url = https://github.com/mvertens/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
 required = True
