updates for new develop snapshot

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -52,9 +52,11 @@ required = True
 #-----------------------------
 
 [blom]
-tag = 0a389fe
+branch = feature/add_tests
+#tag = 0a389fe
 protocol = git
-repo_url = https://github.com/NorESMhub/BLOM
+#repo_url = https://github.com/NorESMhub/BLOM
+repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
@@ -99,11 +101,9 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-#tag = ctsm5.1.dev124-noresm_v1
-branch = feature/fates_nocomp_changes
+tag = ctsm5.1dev130-noresm_v1
 protocol = git
-#repo_url = https://github.com/NorESMhub/CTSM
-repo_url = https://github.com/mvertens/CTSM
+repo_url = https://github.com/NorESMhub/CTSM
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
