updates for new snapshot

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -52,9 +52,10 @@ required = True
 #-----------------------------
 
 [blom]
-branch = feature/add_tests
-#tag = 0a389fe
+#branch = feature/add_tests
+tag = d2fe35b
 protocol = git
+#tag = 0a389fe
 #repo_url = https://github.com/NorESMhub/BLOM
 repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
@@ -123,11 +124,9 @@ local_path = components/rtm
 required = True
 
 [ww3dev]
-#tag = ww3_interface_noresm0.0.4
-branch = feature/updated_workflow 
+tag = ww3_interface_noresm0.0.6
 protocol = git
-#repo_url = https://github.com/NorESMhub/WW3_interface
-repo_url = https://github.com/mvertens/WW3_interface
+repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
 required = True
