--- a/Externals.cfg
+++ b/Externals.cfg
@@ -3,15 +3,15 @@
 #-----------------------------
 
 [parallelio]
-tag = pio2_5_10
 protocol = git
+tag = pio2_5_10
 repo_url = https://github.com/NCAR/ParallelIO
 local_path = libraries/parallelio
 required = True
 
 [mct]
-tag = MCT_2.11.0
 protocol = git
+tag = MCT_2.11.0
 repo_url = https://github.com/MCSclimate/MCT
 local_path = libraries/mct
 required = True
@@ -21,18 +21,20 @@ required = True
 #-----------------------------
 
 [ccs_config]
-#tag = ccs_config_noresm0.0.9
-branch = feature/new_grids
 protocol = git
-#repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
+tag = 59b7e3d
 repo_url = https://github.com/mvertens/ccs_config_cesm.git
+#tag = ccs_config_noresm0.0.9
+#repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
 local_path = ccs_config
 required = True
 
 [cime]
-tag = cime6.0.105_noresm_v2
 protocol = git
-repo_url = https://github.com/NorESMhub/cime.git
+tag = 5a6a47bd8
+repo_url = https://github.com/mvertens/cime.git
+#tag = cime6.0.105_noresm_v2
+#repo_url = https://github.com/NorESMhub/cime.git
 local_path = cime
 required = True
 
@@ -41,8 +43,8 @@ required = True
 #-----------------------------
 
 [share]
-tag = share1.0.17_noresm_v1
 protocol = git
+tag = share1.0.17_noresm_v1
 repo_url = https://github.com/NorESMHub/NorESM_share
 local_path = share
 required = True
@@ -52,44 +54,45 @@ required = True
 #-----------------------------
 
 [blom]
-#branch = feature/add_tests
-tag = d2fe35b
 protocol = git
+tag = d2fe35b
+repo_url = https://github.com/mvertens/BLOM
 #tag = 0a389fe
 #repo_url = https://github.com/NorESMhub/BLOM
-repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
 
 [cam]
-tag = cam6_3_109_noresm_v0
 protocol = git
+tag = cam6_3_109_noresm_v0
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
 
 [cice6]
-tag = cesm_cice6_4_1_7_noresm_v1
 protocol = git
+tag = cesm_cice6_4_1_7_noresm_v1
 repo_url = https://github.com/NorESMhub/NorESM_CICE
 local_path = components/cice
 externals = Externals.cfg
 required = True
 
 [cdeps]
-tag = cdeps1.0.10
 protocol = git
+tag = cdeps1.0.10
 repo_url = https://github.com/NorESMhub/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
 
 [cmeps]
-tag = cmeps0.14.32_noresm_v0
 protocol = git
-repo_url = https://github.com/NorESMhub/CMEPS.git
+tag = b199f43
+repo_url = https://github.com/mvertens/CMEPS.git
+#tag = cmeps0.14.32_noresm_v0
+#repo_url = https://github.com/NorESMhub/CMEPS.git
 local_path = components/cmeps
 required = True
 
@@ -102,30 +105,31 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = ctsm5.1dev130-noresm_v1
 protocol = git
+tag = ctsm5.1dev130-noresm_v1
 repo_url = https://github.com/NorESMhub/CTSM
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
 
 [mosart]
-tag = mosart1_0_48_noresm_v1
 protocol = git
+tag = mosart1_0_48_noresm_v1
 repo_url = https://github.com/NorESMhub/MOSART
 local_path = components/mosart
 required = True
 
 [rtm]
-tag = rtm1_0_78
 protocol = git
+tag = rtm1_0_78
 repo_url = https://github.com/ESCOMP/RTM
 local_path = components/rtm
 required = True
 
 [ww3dev]
-tag = ww3_interface_noresm0.0.6
 protocol = git
+tag = b9206e9
+#tag = ww3_interface_noresm0.0.6
 repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
@@ -136,8 +140,8 @@ required = True
 #-----------------------------
 
 [pycect]
-tag = 3.2.2
 protocol = git
+tag = 3.2.2
 repo_url = https://github.com/NCAR/PyCECT
 local_path = tools/statistical_ensemble_test/pyCECT
 required = False
