more updates as results of PRs

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,19 +22,15 @@ required = True
 
 [ccs_config]
 protocol = git
-tag = 59b7e3d
-repo_url = https://github.com/mvertens/ccs_config_cesm.git
-#tag = ccs_config_noresm0.0.9
-#repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
+tag = ccs_config_noresm0.0.12
+repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
 local_path = ccs_config
 required = True
 
 [cime]
 protocol = git
-tag = 5a6a47bd8
-repo_url = https://github.com/mvertens/cime.git
-#tag = cime6.0.105_noresm_v2
-#repo_url = https://github.com/NorESMhub/cime.git
+tag = cime6.0.105_noresm_v3
+repo_url = https://github.com/NorESMhub/cime.git
 local_path = cime
 required = True
 
@@ -89,10 +85,8 @@ required = True
 
 [cmeps]
 protocol = git
-tag = b199f43
-repo_url = https://github.com/mvertens/CMEPS.git
-#tag = cmeps0.14.32_noresm_v0
-#repo_url = https://github.com/NorESMhub/CMEPS.git
+tag = cmeps0.14.32_noresm_v2
+repo_url = https://github.com/NorESMhub/CMEPS.git
 local_path = components/cmeps
 required = True
 
