--- a/Externals.cfg
+++ b/Externals.cfg
@@ -122,8 +122,7 @@ required = True
 
 [ww3dev]
 protocol = git
-tag = b9206e9
-#tag = ww3_interface_noresm0.0.6
+tag = ww3_interface_noresm0.0.7
 repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
