--- a/Externals.cfg
+++ b/Externals.cfg
@@ -29,7 +29,7 @@ required = True
 
 [cime]
 protocol = git
-tag = cime6.0.105_noresm_v3
+tag = cime6.0.105_noresm_v4
 repo_url = https://github.com/NorESMhub/cime.git
 local_path = cime
 required = True
@@ -51,17 +51,16 @@ required = True
 
 [blom]
 protocol = git
-tag = d2fe35b
+# branch feature/add_tests (PR has been made)
+tag = de96479
 repo_url = https://github.com/mvertens/BLOM
-#tag = 0a389fe
-#repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
 
 [cam]
 protocol = git
-tag = cam6_3_109_noresm_v0
+tag = noresm_v4_cam6_3_112
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
@@ -122,7 +121,7 @@ required = True
 
 [ww3dev]
 protocol = git
-tag = ww3_interface_noresm0.0.7
+tag = ww3_interface_noresm0.0.9
 repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
