updates for blom

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -51,9 +51,8 @@ required = True
 
 [blom]
 protocol = git
-# branch feature/add_tests (PR has been made)
-tag = de96479
-repo_url = https://github.com/mvertens/BLOM
+tag = 2bb8e7c
+repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
