--- a/Externals.cfg
+++ b/Externals.cfg
@@ -13,7 +13,7 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.6
+tag = cime6.0.184_noresm_v1
 protocol = git
 repo_url = https://github.com/NorESMhub/cime
 local_path = cime
