Update BLOM tag

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -51,7 +51,7 @@ externals = Externals_POP.cfg
 required = False
 
 [blom]
-hash = f5dd74de2a34803648a5683b1971e0bbe5a8ec42
+tag = v1.5.0
 protocol = git
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
