--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,5 +1,5 @@
 [cam]
-tag = cam_noresm2_1_v1.0.0
+tag = cam_noresm2_1_v1.0.1
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
@@ -13,7 +13,7 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.6.10_cesm2_1_rel_06-Nor_v1.0.8
+tag = cime5.6.10_NorESM2_1_r3
 protocol = git
 repo_url = https://github.com/NorESMhub/cime
 local_path = cime
@@ -28,7 +28,7 @@ externals = Externals_CISM.cfg
 required = False
 
 [clm]
-tag = release-clm5.0.14-Nor_v1.0.4
+tag = release-clm5.0.14-Nor_v1.0.5
 protocol = git
 repo_url = https://github.com/NorESMhub/ctsm
 local_path = components/clm
@@ -51,7 +51,7 @@ externals = Externals_POP.cfg
 required = False
 
 [blom]
-tag = v1.5.0
+tag = v1.5.1
 protocol = git
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
