updates for CAM external

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -59,8 +59,10 @@ required = True
 
 [cam]
 protocol = git
-tag = noresm_v8_cam6_3_123
-repo_url = https://github.com/NorESMhub/CAM
+#tag = noresm_v8_cam6_3_123
+#repo_url = https://github.com/NorESMhub/CAM
+branch = feature/update_noresm_develop_to_noresm2_3_develop
+repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
