Set CAM branch to noresm2_3_develop Add CAM Externals (Externals_CAM.cfg)

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,8 +1,9 @@
 [cam]
-tag = cam_noresm2_1_v1.0.2
+branch = noresm2_3_develop
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
+externals = Externals_CAM.cfg
 required = True
 
 [cice]
