--- a/Externals.cfg
+++ b/Externals.cfg
@@ -59,10 +59,8 @@ required = True
 
 [cam]
 protocol = git
-#tag = noresm_v8_cam6_3_123
-#repo_url = https://github.com/NorESMhub/CAM
-branch = feature/update_noresm_develop_to_noresm2_3_develop
-repo_url = https://github.com/mvertens/CAM
+tag = noresm_v9_cam6_3_123
+repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
