modified Externals.cfg to point for CAM to noresm2_3_chem branch in fork

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,7 @@
 [cam]
-branch = noresm2_3_develop
+branch = noresm2_3_chem
 protocol = git
-repo_url = https://github.com/NorESMhub/CAM
+repo_url = https://github.com/DirkOlivie/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
