first commit for noresm2_5_alpha02

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -21,16 +21,18 @@ required = True
 #-----------------------------
 
 [ccs_config]
+# https://github.com/NorESMhub/ccs_config_noresm/pull/37
 protocol = git
-tag = ccs_config_noresm0.0.23
-repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
+branch = feature/add_dglc_noresm
+repo_url = https://github.com/mvertens/ccs_config_cesm.git
 local_path = ccs_config
 required = True
 
 [cime]
+# https://github.com/NorESMhub/cime/pull/75
 protocol = git
-tag = cime6.0.105_noresm_v4
-repo_url = https://github.com/NorESMhub/cime.git
+branch = feature/add_dglc_noresm
+repo_url = https://github.com/mvertens/cime.git
 local_path = cime
 required = True
 
@@ -40,7 +42,7 @@ required = True
 
 [share]
 protocol = git
-tag = share1.0.17_noresm_v1
+tag = share1.0.18_noresm_v0
 repo_url = https://github.com/NorESMHub/NorESM_share
 local_path = share
 required = True
@@ -51,16 +53,18 @@ required = True
 
 [blom]
 protocol = git
-tag = v1.5.0
+hash = 5e46536
 repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
 
 [cam]
+# needs PR to noresmhub (also for oslo_aero)
 protocol = git
-tag = noresm_v8_cam6_3_123
-repo_url = https://github.com/NorESMhub/CAM
+#tag = 94be31fe
+branch = feature/new_sum_diagnostics
+repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
@@ -74,31 +78,34 @@ externals = Externals.cfg
 required = True
 
 [cdeps]
+# https://github.com/NorESMhub/CDEPS/pull/3
 protocol = git
-tag = cdeps1.0.10
-repo_url = https://github.com/NorESMhub/CDEPS.git
+tag = cdeps1.0.31
+repo_url = https://github.com/ESCOMP/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
 
 [cmeps]
+# https://github.com/NorESMhub/CMEPS/pull/21
 protocol = git
-tag = cmeps0.14.32_noresm_v4
-repo_url  = https://github.com/NorESMhub/CMEPS.git
+branch = feature/update_noresm_to_cmeps0.14.60
+repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cism]
-tag = cismwrap_2_1_95
+# needs PR
 protocol = git
-repo_url = https://github.com/ESCOMP/CISM-wrapper
+branch = feature/update_to_cismwrap_2_1_99
+repo_url = https://github.com/mvertens/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
 required = True
 
 [clm]
 protocol = git
-tag = ctsm5.1.dev151-noresm_v1
+tag = ctsm5.1.dev167-noresm_1
 repo_url = https://github.com/NorESMhub/CTSM
 local_path = components/clm
 externals = Externals_CLM.cfg
@@ -106,21 +113,14 @@ required = True
 
 [mosart]
 protocol = git
-tag = mosart1_0_48_noresm_v1
+tag = mosart1_0_49_noresm_v2
 repo_url = https://github.com/NorESMhub/MOSART
 local_path = components/mosart
 required = True
 
-[rtm]
-protocol = git
-tag = rtm1_0_78
-repo_url = https://github.com/ESCOMP/RTM
-local_path = components/rtm
-required = True
-
 [ww3dev]
 protocol = git
-tag = ww3_interface_noresm0.0.12
+tag = ww3_interface_noresm0.0.13
 repo_url = https://github.com/NorESMhub/WW3_interface
 local_path = components/ww3dev
 externals = Externals.cfg
