--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,5 +1,5 @@
 [cam]
-branch = noresm2_3_develop
+tag = cam_noresm2_3_v1.0.0a
 protocol = git
 repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
