--- a/Externals.cfg
+++ b/Externals.cfg
@@ -60,7 +60,7 @@ externals = Externals_BLOM.cfg
 required = True
 
 [cam]
-# needs PR to noresmhub (also for oslo_aero)
+# https://github.com/NorESMhub/CAM/pull/145
 protocol = git
 #tag = 94be31fe
 branch = feature/new_sum_diagnostics
@@ -95,7 +95,7 @@ local_path = components/cmeps
 required = True
 
 [cism]
-# needs PR
+# https://github.com/NorESMhub/CISM-wrapper/pull/2
 protocol = git
 branch = feature/update_to_cismwrap_2_1_99
 repo_url = https://github.com/mvertens/CISM-wrapper
@@ -105,7 +105,7 @@ required = True
 
 [clm]
 protocol = git
-tag = ctsm5.1.dev167-noresm_1
+tag = ctsm5.2.0-noresm_v0
 repo_url = https://github.com/NorESMhub/CTSM
 local_path = components/clm
 externals = Externals_CLM.cfg
