changes for cism and bug fix for cam among other updates

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -29,10 +29,9 @@ local_path = ccs_config
 required = True
 
 [cime]
-# https://github.com/NorESMhub/cime/pull/75
 protocol = git
-branch = feature/add_dglc_noresm
-repo_url = https://github.com/mvertens/cime.git
+branch = cime6.0.238_httpsbranch
+repo_url = https://github.com/ESMCI/cime.git
 local_path = cime
 required = True
 
@@ -70,34 +69,36 @@ externals = Externals_CAM.cfg
 required = True
 
 [cice6]
+# needs PR
 protocol = git
-tag = cesm_cice6_4_1_7_noresm_v1
-repo_url = https://github.com/NorESMhub/NorESM_CICE
+branch = feature/new_blom_grids
+repo_url = https://github.com/mvertens/CESM_CICE
 local_path = components/cice
 externals = Externals.cfg
 required = True
 
 [cdeps]
-# https://github.com/NorESMhub/CDEPS/pull/3
+# needs PR
 protocol = git
-tag = cdeps1.0.31
-repo_url = https://github.com/ESCOMP/CDEPS.git
+tag = feature/update_docn
+repo_url = https://github.com/mvertens/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
 
 [cmeps]
-# https://github.com/NorESMhub/CMEPS/pull/21
+# needs PR
 protocol = git
-branch = feature/update_noresm_to_cmeps0.14.60
+tag = feature/update_docn
 repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cism]
-# https://github.com/NorESMhub/CISM-wrapper/pull/2
 protocol = git
-branch = feature/update_to_cismwrap_2_1_99
+#tag = cismwrap_2_1_99_noresm_v1
+#repo_url = https://github.com/NorESMhub/CISM-wrapper
+branch = feature/update_docn_noresm
 repo_url = https://github.com/mvertens/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
