--- a/Externals.cfg
+++ b/Externals.cfg
@@ -21,10 +21,9 @@ required = True
 #-----------------------------
 
 [ccs_config]
-# https://github.com/NorESMhub/ccs_config_noresm/pull/37
 protocol = git
-branch = feature/add_dglc_noresm
-repo_url = https://github.com/mvertens/ccs_config_cesm.git
+tag = ccs_config_noresm0.0.29
+repo_url = https://github.com/NorESMHub/ccs_config_noresm.git
 local_path = ccs_config
 required = True
 
@@ -51,9 +50,10 @@ required = True
 #-----------------------------
 
 [blom]
+# https://github.com/NorESMhub/BLOM/pull/342
 protocol = git
-hash = 5e46536
-repo_url = https://github.com/NorESMhub/BLOM
+branch = feature/new_stream_relaxation
+repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
@@ -61,7 +61,6 @@ required = True
 [cam]
 # https://github.com/NorESMhub/CAM/pull/145
 protocol = git
-#tag = 94be31fe
 branch = feature/new_sum_diagnostics
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
@@ -69,37 +68,32 @@ externals = Externals_CAM.cfg
 required = True
 
 [cice6]
-# needs PR
 protocol = git
-branch = feature/new_blom_grids
-repo_url = https://github.com/mvertens/CESM_CICE
+tag = cesm_cice6_4_1_7_noresm_v2
+repo_url = https://github.com/NorESMHub/CESM_CICE
 local_path = components/cice
 externals = Externals.cfg
 required = True
 
 [cdeps]
-# needs PR
 protocol = git
-tag = feature/update_docn
-repo_url = https://github.com/mvertens/CDEPS.git
+tag = cdeps1.0.33_noresm_v0
+repo_url = https://github.com/NorESMHub/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
 
 [cmeps]
-# needs PR
 protocol = git
-tag = feature/update_docn
-repo_url = https://github.com/mvertens/CMEPS.git
+tag = cmeps0.14.60
+repo_url = https://github.com/NorESMHub/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cism]
 protocol = git
-#tag = cismwrap_2_1_99_noresm_v1
-#repo_url = https://github.com/NorESMhub/CISM-wrapper
-branch = feature/update_docn_noresm
-repo_url = https://github.com/mvertens/CISM-wrapper
+tag = cismwrap_2_1_99_noresm_v1
+repo_url = https://github.com/NorESMHub/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
 required = True
