--- a/Externals.cfg
+++ b/Externals.cfg
@@ -23,7 +23,7 @@ required = True
 [ccs_config]
 protocol = git
 tag = ccs_config_noresm0.0.29
-repo_url = https://github.com/NorESMHub/ccs_config_noresm.git
+repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
 local_path = ccs_config
 required = True
 
@@ -41,7 +41,7 @@ required = True
 [share]
 protocol = git
 tag = share1.0.18_noresm_v0
-repo_url = https://github.com/NorESMHub/NorESM_share
+repo_url = https://github.com/NorESMhub/NorESM_share
 local_path = share
 required = True
 
@@ -70,7 +70,7 @@ required = True
 [cice6]
 protocol = git
 tag = cesm_cice6_4_1_7_noresm_v2
-repo_url = https://github.com/NorESMHub/CESM_CICE
+repo_url = https://github.com/NorESMhub/NorESM_CICE
 local_path = components/cice
 externals = Externals.cfg
 required = True
@@ -78,22 +78,22 @@ required = True
 [cdeps]
 protocol = git
 tag = cdeps1.0.33_noresm_v0
-repo_url = https://github.com/NorESMHub/CDEPS.git
+repo_url = https://github.com/NorESMhub/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
 
 [cmeps]
 protocol = git
-tag = cmeps0.14.60
-repo_url = https://github.com/NorESMHub/CMEPS.git
+tag = cmeps0.14.60_noresm_v0
+repo_url = https://github.com/NorESMhub/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cism]
 protocol = git
 tag = cismwrap_2_1_99_noresm_v1
-repo_url = https://github.com/NorESMHub/CISM-wrapper
+repo_url = https://github.com/NorESMhub/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
 required = True
