changes to have cplhist mode for blom working for Ada

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -50,18 +50,16 @@ required = True
 #-----------------------------
 
 [blom]
-# https://github.com/NorESMhub/BLOM/pull/342
 protocol = git
-branch = feature/new_stream_relaxation
-repo_url = https://github.com/mvertens/BLOM
+tag = dev1.5.1.3
+repo_url = https://github.com/NorESMHub/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
 
 [cam]
-# https://github.com/NorESMhub/CAM/pull/145
 protocol = git
-branch = feature/new_sum_diagnostics
+branch = feature/add_sum_diagnostics
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
@@ -77,16 +75,20 @@ required = True
 
 [cdeps]
 protocol = git
-tag = cdeps1.0.33_noresm_v0
-repo_url = https://github.com/NorESMhub/CDEPS.git
+#tag = cdeps1.0.33_noresm_v0
+#repo_url = https://github.com/NorESMhub/CDEPS.git
+branch = feature/cplhist_for_ada
+repo_url = https://github.com/mvertens/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
 
 [cmeps]
 protocol = git
-tag = cmeps0.14.60_noresm_v0
-repo_url = https://github.com/NorESMhub/CMEPS.git
+#tag = cmeps0.14.60_noresm_v0
+#repo_url = https://github.com/NorESMhub/CMEPS.git
+branch = feature/cplhist_for_ada
+repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
