point to correct cmeps external

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -87,7 +87,7 @@ required = True
 protocol = git
 #tag = cmeps0.14.60_noresm_v0
 #repo_url = https://github.com/NorESMhub/CMEPS.git
-branch = feature/cplhist_for_ada
+branch = feature/add_errorchecks
 repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
