modified Externals_CAM.cfg to point to NorESMhub

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -1,7 +1,7 @@
 [cam]
 branch = noresm2_3_chem
 protocol = git
-repo_url = https://github.com/DirkOlivie/CAM
+repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
