updates for PR for noresm2_5_alpha02

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -59,8 +59,8 @@ required = True
 
 [cam]
 protocol = git
-branch = feature/add_sum_diagnostics
-repo_url = https://github.com/mvertens/CAM
+tag = noresm_v12_cam6_3_123
+repo_url = https://github.com/NorESMhub/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
 required = True
@@ -75,20 +75,16 @@ required = True
 
 [cdeps]
 protocol = git
-#tag = cdeps1.0.33_noresm_v0
-#repo_url = https://github.com/NorESMhub/CDEPS.git
-branch = feature/cplhist_for_ada
-repo_url = https://github.com/mvertens/CDEPS.git
+tag = cdeps1.0.33_noresm_v0
+repo_url = https://github.com/NorESMhub/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
 
 [cmeps]
 protocol = git
-#tag = cmeps0.14.60_noresm_v0
-#repo_url = https://github.com/NorESMhub/CMEPS.git
-branch = feature/add_errorchecks
-repo_url = https://github.com/mvertens/CMEPS.git
+tag = cmeps0.14.60_noresm_v0
+repo_url = https://github.com/NorESMhub/CMEPS.git
 local_path = components/cmeps
 required = True
 
