--- a/Externals.cfg
+++ b/Externals.cfg
@@ -51,7 +51,7 @@ required = True
 
 [blom]
 protocol = git
-tag = dev1.5.1.4
+tag = v1.6.0
 repo_url = https://github.com/NorESMHub/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
