new escomp external for MOSART

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -106,8 +106,8 @@ required = True
 
 [mosart]
 protocol = git
-branch = feature/cism2mosart
-repo_url = https://github.com/mvertens/MOSART
+tag = mosart1.1.02
+repo_url = https://github.com/ESCOMP/MOSART
 local_path = components/mosart
 required = True
 
