--- a/Externals.cfg
+++ b/Externals.cfg
@@ -51,7 +51,7 @@ required = True
 
 [blom]
 protocol = git
-tag = dev1.5.1.4
+tag = v1.6.1
 repo_url = https://github.com/NorESMHub/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
@@ -59,7 +59,7 @@ required = True
 
 [cam]
 protocol = git
-branch = gold2718/UpdateNoresmBranch
+branch = feature/UpdateNoresmBranch
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
