point to blom branch instead

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -51,8 +51,10 @@ required = True
 
 [blom]
 protocol = git
-tag = v1.6.1
-repo_url = https://github.com/NorESMHub/BLOM
+#tag = v1.6.1
+#repo_url = https://github.com/NorESMHub/BLOM
+branch = feature/refactor_blom
+repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
