--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,14 +22,15 @@ required = True
 
 [ccs_config]
 protocol = git
-tag = ccs_config_noresm0.0.30
-repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
+#branch = feature/trigrid
+tag = 7adbb95
+repo_url = https://github.com/mvertens/ccs_config_cesm.git
 local_path = ccs_config
 required = True
 
 [cime]
 protocol = git
-branch = cime6.0.238_httpsbranch
+tag = cime6.0.250
 repo_url = https://github.com/ESMCI/cime.git
 local_path = cime
 required = True
@@ -40,8 +41,9 @@ required = True
 
 [share]
 protocol = git
-tag = share1.0.18_noresm_v0
-repo_url = https://github.com/NorESMhub/NorESM_share
+#branch = feature/update_share
+tag = 870f7a2
+repo_url = https://github.com/mvertens/NorESM_share
 local_path = share
 required = True
 
@@ -51,17 +53,16 @@ required = True
 
 [blom]
 protocol = git
-#tag = v1.6.1
-#repo_url = https://github.com/NorESMHub/BLOM
-branch = feature/refactor_blom
-repo_url = https://github.com/mvertens/BLOM
+tag = dev1.6.1.2
+repo_url = https://github.com/NorESMhub/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
 
 [cam]
 protocol = git
-branch = feature/UpdateNoresmBranch
+#branch = feature/UpdateNoresmBranch
+tag = 31d580aa
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
@@ -85,14 +86,16 @@ required = True
 
 [cmeps]
 protocol = git
-branch = feature/trigrid
+#branch = feature/dms_and_bromo
+tag = 9598a494
 repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
 
 [cism]
 protocol = git
-branch = feature/cism2mosart
+#branch = feature/cism2mosart
+tag = 756cfa6
 repo_url = https://github.com/mvertens/CISM-wrapper
 local_path = components/cism
 externals = Externals_CISM.cfg
