--- a/Externals.cfg
+++ b/Externals.cfg
@@ -42,8 +42,9 @@ required = True
 [share]
 protocol = git
 #branch = feature/update_share
-tag = 870f7a2
-repo_url = https://github.com/mvertens/NorESM_share
+#repo_url = https://github.com/mvertens/NorESM_share
+tag = share1.1.2
+repo_url = https://github.com/ESCOMP/CESM_share
 local_path = share
 required = True
 
@@ -53,8 +54,9 @@ required = True
 
 [blom]
 protocol = git
-tag = dev1.6.1.2
-repo_url = https://github.com/NorESMhub/BLOM
+#tag = dev1.6.1.2
+branch = feature/fixbugs
+repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
 required = True
@@ -62,7 +64,7 @@ required = True
 [cam]
 protocol = git
 #branch = feature/UpdateNoresmBranch
-tag = 31d580aa
+tag = c1b868a5
 repo_url = https://github.com/mvertens/CAM
 local_path = components/cam
 externals = Externals_CAM.cfg
