fixed share path

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -44,7 +44,7 @@ required = True
 [share]
 protocol = git
 branch = feature/update_share
-repo_url = https://github.com/mvertens/NorESM_share
+repo_url = https://github.com/mvertens/CESM_share
 local_path = share
 required = True
 
