updates to ww3 and for sending Si_thick from ice to wav

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -52,7 +52,7 @@ required = True
 [blom]
 protocol = git
 #branch = feature/ocn2glc (one off from dev1.6.1.3)
-tag = 586a758
+tag = 71d57d7
 repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
@@ -69,25 +69,27 @@ required = True
 
 [cice6]
 protocol = git
-tag = cesm_cice6_4_1_7_noresm_v2
-repo_url = https://github.com/NorESMhub/NorESM_CICE
+#tag = cesm_cice6_4_1_7_noresm_v2
+#repo_url = https://github.com/NorESMhub/NorESM_CICE
+tag = 91dac59
+repo_url = https://github.com/mvertens/CESM_CICE
 local_path = components/cice
 externals = Externals.cfg
 required = True
 
 [cdeps]
 protocol = git
-#branch = feature/add_dom_to_multilevtag (one off from cdeps1.0.43)
-tag = d0e8fc7
-repo_url = https://github.com/mvertens/CDEPS.git
+tag = cdeps1.0.44
+repo_url = https://github.com/ESCOMP/CDEPS.git
 local_path = components/cdeps
 externals =  Externals_CDEPS.cfg
 required = True
 
 [cmeps]
 protocol = git
-#branch = feature/add_blom
-tag = 38622180
+#tag = cmeps1.0.4
+#repo_url = https://github.com/ESCOMP/CMEPS.git
+tag = d432eb23
 repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
 required = True
@@ -116,11 +118,13 @@ repo_url = https://github.com/ESCOMP/MOSART
 local_path = components/mosart
 required = True
 
-[ww3dev]
+[ww3]
 protocol = git
-tag = ww3_interface_noresm0.0.13
-repo_url = https://github.com/NorESMhub/WW3_interface
-local_path = components/ww3dev
+#tag = ww3_interface_noresm0.0.13
+#repo_url = https://github.com/NorESMhub/WW3_interface
+tag = e4bdd05
+repo_url = https://github.com/mvertens/WW3_interface
+local_path = components/ww3
 externals = Externals.cfg
 required = True
 
