updated cmeps, cice6, blom and ccs_config

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -22,8 +22,8 @@ required = True
 
 [ccs_config]
 protocol = git
-tag = ccs_config_noresm0.0.31
-repo_url = https://github.com/NorESMhub/ccs_config_noresm.git
+tag = 0231125
+repo_url = https://github.com/mvertens/ccs_config_mvertens.git
 local_path = ccs_config
 required = True
 
@@ -51,8 +51,8 @@ required = True
 
 [blom]
 protocol = git
-#branch = feature/ocn2glc (one off from dev1.6.1.3)
-tag = 71d57d7
+#branch = feature/ocn2glc
+tag = 536148a
 repo_url = https://github.com/mvertens/BLOM
 local_path = components/blom
 externals = Externals_BLOM.cfg
@@ -69,8 +69,7 @@ required = True
 
 [cice6]
 protocol = git
-#tag = cesm_cice6_4_1_7_noresm_v2
-#repo_url = https://github.com/NorESMhub/NorESM_CICE
+#branch = feature/sithick_to_wav
 tag = 91dac59
 repo_url = https://github.com/mvertens/CESM_CICE
 local_path = components/cice
@@ -87,8 +86,7 @@ required = True
 
 [cmeps]
 protocol = git
-#tag = cmeps1.0.4
-#repo_url = https://github.com/ESCOMP/CMEPS.git
+#branch = feature/sithick_to_wav
 tag = d432eb23
 repo_url = https://github.com/mvertens/CMEPS.git
 local_path = components/cmeps
